gram/Tebot.g4
grammar Tebot;

TEBOT_WHITESPACE:     [ \t\r\n]+ -> channel(HIDDEN);
TEBOT_COMMENT:        '#' ~[\r\n]* -> channel(HIDDEN);

TEBOT_QUOTED_STRING:  '"' (~[\r\n"])* '"';

tebot_selector
  :   TEBOT_QUOTED_STRING
  ;

tebot_value
  :   TEBOT_QUOTED_STRING
  ;

tebot_action
  :   'click'
  |   'dblclick'
  |   'input'
  |   'select'
  |   'capture'
  |   'sleep'
  |   'goto'
  |   'move'
  |   'scroll'
  |   'save'
  |   'paste'
  |   'html'
  |   'assert'
  ;

tebot_assign
  :   (selector=tebot_selector '=')? value=tebot_value
  ;

tebot_operation
  :   tebot_action '(' (tebot_selector | tebot_assign) ')'
  |   tebot_assert
  ;

tebot_assert
  :   'assert' '(' dsn=tebot_value ',' sql=tebot_value ',' expected=tebot_value ')'
  ;  

tebot_operations
  :   tebot_operation*
  ;
